modified the page a little bit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- This file shows everyone the current state of the tournament - it is published in GitHub platform and edited after every tournament stage -->
-<!-- It shows who plays verses who and who won the games -->
-<!-- It is build automatically by tournament.py and published by the game runners themselves -->
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Binary Tree Visualization</title>
 </head>
+<!-- JUST UPLOAD A TABLE THAT CONTAINS THE USERS WHO CURRENTLY COMPETE EACH OTHER, THAT'S IT, A TREE IS NOT NECESSARY -->
 <body>
-
 </body>
 </html>
