server control advanced

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Tree Visualization</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Table Visualisation</title>
 </head>
-<!-- JUST UPLOAD A TABLE THAT CONTAINS THE USERS WHO CURRENTLY COMPETE EACH OTHER, THAT'S IT, A TREE IS NOT NECESSARY -->
 <body>
+<h1>The Snake Game</h1>
+<!--make sure keep the table here-->
+<table>
+    <tr>
+        <th>קבוצה א'</th>
+        <th>קבוצה ב'</th>
+    </tr>
+</table>
 </body>
 </html>
