Added server auto control

--- a/index.html
+++ b/index.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Table Visualisation</title>
+    <title>The Snake Game</title>
+    <link rel="icon" type="image/png" href="../snake_icon.png"/>
 </head>
 <body>
 <h1>The Snake Game</h1>
+<h2><a href="https://forms.gle/49FchrWEK4fFDqqV6" target="_blank">לחצו כאן כדי להגיד מי מיכם ניצח...</a></h2>
 <!--make sure keep the table here-->
 <table>
     <tr>
         <th>קבוצה א'</th>
         <th>קבוצה ב'</th>
+    </tr>
+    <tr>
+        <td>הקבוצה של: נועם, רון, שרי</td>
+        <td>הקבוצה של: עוד אחד, לא נתמך עי גוגל</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: היייי, עמרי</td>
+        <td>הקבוצה של: טון, גור</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: דור, נכון</td>
+        <td>הקבוצה של: איי, אלכס</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: אור, המפקד</td>
+        <td>הקבוצה של: אריה, הקשבי</td>
     </tr>
 </table>
 </body>
