Committing index for Game {83785057}, Stage 1

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, רון, שרי</td>
-        <td>הקבוצה של: עוד אחד, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: עמרי, רון, אור</td>
+        <td>הקבוצה של: איי, שרי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: היייי, עמרי</td>
-        <td>הקבוצה של: טון, גור</td>
+        <td>הקבוצה של: נכון, אריה</td>
+        <td>הקבוצה של: נועם, גור</td>
     </tr>
     <tr>
-        <td>הקבוצה של: דור, נכון</td>
-        <td>הקבוצה של: איי, אלכס</td>
+        <td>הקבוצה של: דור, הקשבי</td>
+        <td>הקבוצה של: עוד אחד, טון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אור, המפקד</td>
-        <td>הקבוצה של: אריה, הקשבי</td>
+        <td>הקבוצה של: המפקד, אלכס</td>
+        <td>הקבוצה של: לא נתמך עי גוגל, היייי</td>
     </tr>
 </table>
 </body>
