Committing index.html for Game {51108177}, Stage 1

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: עמרי, רון, אור</td>
-        <td>הקבוצה של: איי, שרי</td>
+        <td>הקבוצה של: רון, היייי, שרי</td>
+        <td>הקבוצה של: אריה, עוד אחד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נכון, אריה</td>
-        <td>הקבוצה של: נועם, גור</td>
+        <td>הקבוצה של: אור, דור</td>
+        <td>הקבוצה של: אלכס, נכון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: דור, הקשבי</td>
-        <td>הקבוצה של: עוד אחד, טון</td>
+        <td>הקבוצה של: הקשבי, נועם</td>
+        <td>הקבוצה של: עמרי, גור</td>
     </tr>
     <tr>
-        <td>הקבוצה של: המפקד, אלכס</td>
-        <td>הקבוצה של: לא נתמך עי גוגל, היייי</td>
+        <td>הקבוצה של: לא נתמך עי גוגל, איי</td>
+        <td>הקבוצה של: טון, המפקד</td>
     </tr>
 </table>
 </body>
