--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--For GitHub-->
+    <meta http-equiv="cache-control" content='no-cache'>
+    <meta http-equiv="expires" content='0'>
+    <meta http-equiv="pragma" content='no-cache'>
+
     <link rel="stylesheet" href="index.css">
     <title>The Snake Game</title>
     <link rel="icon" type="image/png" href="../snake_icon.png"/>
