Committing index.html for Game {11347541}, Stage 1

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: רון, היייי, שרי</td>
-        <td>הקבוצה של: אריה, עוד אחד</td>
+        <td>הקבוצה של: טון, לא נתמך עי גוגל, המפקד</td>
+        <td>הקבוצה של: נועם, עוד אחד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אור, דור</td>
-        <td>הקבוצה של: אלכס, נכון</td>
+        <td>הקבוצה של: דור, אלכס</td>
+        <td>הקבוצה של: גור, היייי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: הקשבי, נועם</td>
-        <td>הקבוצה של: עמרי, גור</td>
+        <td>הקבוצה של: רון, אור</td>
+        <td>הקבוצה של: איי, הקשבי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: לא נתמך עי גוגל, איי</td>
-        <td>הקבוצה של: טון, המפקד</td>
+        <td>הקבוצה של: אריה, עמרי</td>
+        <td>הקבוצה של: נכון, שרי</td>
     </tr>
 </table>
 </body>
