Committing index.html for Game {27637515}, Stage 1

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: טון, לא נתמך עי גוגל, המפקד</td>
-        <td>הקבוצה של: נועם, עוד אחד</td>
+        <td>הקבוצה של: אלכס, אור, הקשבי</td>
+        <td>הקבוצה של: שרי, דור</td>
     </tr>
     <tr>
-        <td>הקבוצה של: דור, אלכס</td>
-        <td>הקבוצה של: גור, היייי</td>
+        <td>הקבוצה של: נכון, טון</td>
+        <td>הקבוצה של: המפקד, לא נתמך עי גוגל</td>
     </tr>
     <tr>
-        <td>הקבוצה של: רון, אור</td>
-        <td>הקבוצה של: איי, הקשבי</td>
+        <td>הקבוצה של: עמרי, רון</td>
+        <td>הקבוצה של: עוד אחד, איי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אריה, עמרי</td>
-        <td>הקבוצה של: נכון, שרי</td>
+        <td>הקבוצה של: גור, נועם</td>
+        <td>הקבוצה של: היייי, אריה</td>
     </tr>
 </table>
 </body>
