Committing index.html for Game {63960141}, Stage 1

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: אלכס, אור, הקשבי</td>
-        <td>הקבוצה של: שרי, דור</td>
+        <td>הקבוצה של: לא נתמך עי גוגל, אלכס, אריה</td>
+        <td>הקבוצה של: אור, שרי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נכון, טון</td>
-        <td>הקבוצה של: המפקד, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: המפקד, הקשבי</td>
+        <td>הקבוצה של: נכון, היייי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: עמרי, רון</td>
-        <td>הקבוצה של: עוד אחד, איי</td>
+        <td>הקבוצה של: איי, עמרי</td>
+        <td>הקבוצה של: נועם, טון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: גור, נועם</td>
-        <td>הקבוצה של: היייי, אריה</td>
+        <td>הקבוצה של: עוד אחד, רון</td>
+        <td>הקבוצה של: דור, גור</td>
     </tr>
 </table>
 </body>
