--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!--For GitHub-->
     <meta http-equiv="cache-control" content='no-cache'>
     <meta http-equiv="expires" content='0'>
@@ -11,6 +12,15 @@
     <link rel="stylesheet" href="index.css">
     <title>The Snake Game</title>
     <link rel="icon" type="image/png" href="../snake_icon.png"/>
+
+    <script>
+    if (!location.hash) {
+        location.hash = "#reloading";
+        location.reload(true);
+    } else {
+        location.hash = "#reloaded";
+    }
+    </script>
 </head>
 <body>
 <h1>The Snake Game</h1>
@@ -22,12 +32,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: אור, שרי</td>
-        <td>הקבוצה של: המפקד, הקשבי</td>
+        <td>הקבוצה של: נועם, דור, אור</td>
+        <td>הקבוצה של: רון, לא נתמך עי גוגל</td>
     </tr>
     <tr>
-        <td>הקבוצה של: איי, עמרי</td>
-        <td>הקבוצה של: דור, גור</td>
+        <td>הקבוצה של: היייי, איי</td>
+        <td>הקבוצה של: עמרי, נכון</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שרי, המפקד</td>
+        <td>הקבוצה של: טון, גור</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: הקשבי, אריה</td>
+        <td>הקבוצה של: אלכס, עוד אחד</td>
     </tr>
 </table>
 </body>
