Committing index.html for Game {4778564}, Stage 1

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, דור, אור</td>
-        <td>הקבוצה של: רון, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: אריה, שרי, דור</td>
+        <td>הקבוצה של: נכון, טון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: היייי, איי</td>
-        <td>הקבוצה של: עמרי, נכון</td>
+        <td>הקבוצה של: גור, רון</td>
+        <td>הקבוצה של: עמרי, אלכס</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שרי, המפקד</td>
-        <td>הקבוצה של: טון, גור</td>
+        <td>הקבוצה של: הקשבי, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: נועם, אור</td>
     </tr>
     <tr>
-        <td>הקבוצה של: הקשבי, אריה</td>
-        <td>הקבוצה של: אלכס, עוד אחד</td>
+        <td>הקבוצה של: היייי, עוד אחד</td>
+        <td>הקבוצה של: איי, המפקד</td>
     </tr>
 </table>
 </body>
