Committing index.html for Game {82979575}, Stage 1

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: לא נתמך עי גוגל, אלכס, עמרי</td>
-        <td>הקבוצה של: הקשבי, אריה</td>
+        <td>הקבוצה של: היייי, דור, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: עוד אחד, המפקד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: גור, עוד אחד</td>
-        <td>הקבוצה של: היייי, אור</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: רון, איי</td>
-        <td>הקבוצה של: המפקד, נכון</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: נועם, דור</td>
+        <td>הקבוצה של: איי, גור</td>
         <td>הקבוצה של: טון, שרי</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: אלכס, אור</td>
+        <td>הקבוצה של: עמרי, הקשבי</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: אריה, נכון</td>
+        <td>הקבוצה של: נועם, רון</td>
     </tr>
 </table>
 </body>
