Committing index.html for Game {8312412}, Stage 1

--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
     <link rel="stylesheet" href="index1.css">
     <title>The Snake Game</title>
     <link rel="icon" type="image/png" href="../snake_icon.png"/>
-
-    <script>
-        const MIN_MILLISECONDS_FOR_RELOAD = 10 * (10**3)
-        const d = (new Date()).getTime();
-
-        if ("" === document.cookie || d - parseInt(document.cookie) >= MIN_MILLISECONDS_FOR_RELOAD) {
-            alert("heyy")
-            document.cookie = d.toString();
-            location.reload(true);
-        }
-    </script>
+    <script src = "index.js?version = 1.1"></script>
 </head>
 <body>
 <h1>The Snake Game</h1>
@@ -34,20 +24,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: עמרי, נועם, אלכס</td>
-        <td>הקבוצה של: עוד אחד, המפקד</td>
+        <td>הקבוצה של: אלכס, שרי, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: טון, המפקד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אור, שרי</td>
-        <td>הקבוצה של: אריה, איי</td>
+        <td>הקבוצה של: הקשבי, אריה</td>
+        <td>הקבוצה של: נועם, רון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נכון, הקשבי</td>
-        <td>הקבוצה של: טון, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: דור, עמרי</td>
+        <td>הקבוצה של: היייי, נכון</td>
     </tr>
     <tr>
-        <td>הקבוצה של: רון, היייי</td>
-        <td>הקבוצה של: דור, גור</td>
+        <td>הקבוצה של: גור, איי</td>
+        <td>הקבוצה של: אור, עוד אחד</td>
     </tr>
 </table>
 </body>
