Committing index.html for Game {4174369}, Stage 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="index1.css">
     <title>The Snake Game</title>
     <link rel="icon" type="image/png" href="../snake_icon.png"/>
-    <script src = "index.js?version = 1.2"></script>
+    <script src = "index1.js?version = 1.2"></script>
 </head>
 <body>
 <h1>The Snake Game</h1>
@@ -24,20 +24,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: שרי, אלכס, אור</td>
-        <td>הקבוצה של: נכון, עוד אחד</td>
+        <td>הקבוצה של: אלכס, גור, רון</td>
+        <td>הקבוצה של: דור, המפקד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, אריה</td>
-        <td>הקבוצה של: רון, טון</td>
+        <td>הקבוצה של: נועם, שרי</td>
+        <td>הקבוצה של: טון, אריה</td>
     </tr>
     <tr>
-        <td>הקבוצה של: היייי, דור</td>
-        <td>הקבוצה של: גור, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: היייי, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: הקשבי, איי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: איי, הקשבי</td>
-        <td>הקבוצה של: עמרי, המפקד</td>
+        <td>הקבוצה של: אור, עמרי</td>
+        <td>הקבוצה של: עוד אחד, נכון</td>
     </tr>
 </table>
 </body>
