Changing Website Host to InfinityFree

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta http-equiv="expires" content='0'>
     <meta http-equiv="pragma" content='no-cache'>
 
-    <link rel="stylesheet" href="index1.css">
+    <link rel="stylesheet" href="index.css">
     <title>The Snake Game</title>
     <link rel="icon" type="image/png" href="../snake_icon.png"/>
-    <script src = "index1.js?version = 1.2"></script>
+    <script src = "index.js?version = 1.2"></script>
 </head>
 <body>
 <h1>The Snake Game</h1>
@@ -24,20 +24,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: אלכס, גור, רון</td>
-        <td>הקבוצה של: דור, המפקד</td>
+        <td>הקבוצה של: דור, לא נתמך עי גוגל, שרי</td>
+        <td>הקבוצה של: גור, עמרי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, שרי</td>
-        <td>הקבוצה של: טון, אריה</td>
+        <td>הקבוצה של: אלכס, אריה</td>
+        <td>הקבוצה של: טון, היייי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: היייי, לא נתמך עי גוגל</td>
-        <td>הקבוצה של: הקשבי, איי</td>
+        <td>הקבוצה של: נועם, רון</td>
+        <td>הקבוצה של: אור, עוד אחד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אור, עמרי</td>
-        <td>הקבוצה של: עוד אחד, נכון</td>
+        <td>הקבוצה של: הקשבי, המפקד</td>
+        <td>הקבוצה של: נכון, איי</td>
     </tr>
 </table>
 </body>
