Advanced the server a little bit more

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 </head>
 <body>
 <h1>The Snake Game</h1>
-<h2><a href="https://forms.gle/49FchrWEK4fFDqqV6" target="_blank">לחצו כאן כדי להגיד מי מיכם ניצח...</a></h2>
+<h2>
+    <a href="https://forms.gle/49FchrWEK4fFDqqV6" target="popup"
+       onclick="window.open('https://forms.gle/49FchrWEK4fFDqqV6','מי ניצח?','width=800,height=600')">לחצו כאן כדי להגיד מי מיכם ניצח...</a>
+</h2>
 <!--make sure keep the table here-->
 <table>
     <tr>
@@ -24,20 +27,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: דור, לא נתמך עי גוגל, שרי</td>
-        <td>הקבוצה של: גור, עמרי</td>
+        <td>הקבוצה של: נועם, הקשבי, המפקד</td>
+        <td>הקבוצה של: טון, אריה</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אלכס, אריה</td>
-        <td>הקבוצה של: טון, היייי</td>
+        <td>הקבוצה של: נכון, גור</td>
+        <td>הקבוצה של: אלכס, היייי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, רון</td>
-        <td>הקבוצה של: אור, עוד אחד</td>
+        <td>הקבוצה של: עמרי, איי</td>
+        <td>הקבוצה של: אור, שרי</td>
     </tr>
     <tr>
-        <td>הקבוצה של: הקשבי, המפקד</td>
-        <td>הקבוצה של: נכון, איי</td>
+        <td>הקבוצה של: עוד אחד, לא נתמך עי גוגל</td>
+        <td>הקבוצה של: רון, דור</td>
     </tr>
 </table>
 </body>
