Some new arrangement

--- a/Server/index.html
+++ b/Server/index.html
@@ -11,8 +11,7 @@
 
     <link rel="stylesheet" href="index.css">
     <title>The Snake Game</title>
-    <link rel="icon" type="image/png" href="../snake_icon.png"/>
-    <script src = "index.js?version = 1.2"></script>
+    <link rel="icon" type="image/png" href="snake_icon.png"/>
 </head>
 <body>
 <h1>The Snake Game</h1>
@@ -27,20 +26,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: נועם, הקשבי, המפקד</td>
+        <td>הקבוצה של: עמרי, גור, שרי</td>
+        <td>הקבוצה של: איי, נועם</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: אלכס, נכון</td>
+        <td>הקבוצה של: היייי, עוד אחד</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: לא נתמך עי גוגל, המפקד</td>
         <td>הקבוצה של: טון, אריה</td>
     </tr>
     <tr>
-        <td>הקבוצה של: נכון, גור</td>
-        <td>הקבוצה של: אלכס, היייי</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: עמרי, איי</td>
-        <td>הקבוצה של: אור, שרי</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: עוד אחד, לא נתמך עי גוגל</td>
         <td>הקבוצה של: רון, דור</td>
+        <td>הקבוצה של: אור, הקשבי</td>
     </tr>
 </table>
 </body>
