--- a/Server/index.html
+++ b/Server/index.html
@@ -26,20 +26,20 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: עמרי, גור, שרי</td>
-        <td>הקבוצה של: איי, נועם</td>
+        <td>הקבוצה של: שחקן ה, שחקן ח</td>
+        <td>הקבוצה של: שחקן יג, שחקן ו</td>
     </tr>
     <tr>
-        <td>הקבוצה של: אלכס, נכון</td>
-        <td>הקבוצה של: היייי, עוד אחד</td>
+        <td>הקבוצה של: שחקן ב, שחקן טז</td>
+        <td>הקבוצה של: שחקן יא, שחקן ג</td>
     </tr>
     <tr>
-        <td>הקבוצה של: לא נתמך עי גוגל, המפקד</td>
-        <td>הקבוצה של: טון, אריה</td>
+        <td>הקבוצה של: שחקן יב, שחקן ד</td>
+        <td>הקבוצה של: שחקן יז, שחקן א</td>
     </tr>
     <tr>
-        <td>הקבוצה של: רון, דור</td>
-        <td>הקבוצה של: אור, הקשבי</td>
+        <td>הקבוצה של: שחקן ט, שחקן יד</td>
+        <td>הקבוצה של: שחקן טו, שחקן ז</td>
     </tr>
 </table>
 </body>
