Advanced the server

--- a/Server/index.html
+++ b/Server/index.html
@@ -26,20 +26,24 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן ה, שחקן ח</td>
-        <td>הקבוצה של: שחקן יג, שחקן ו</td>
+        <td>הקבוצה של: שחקן יח, שחקן יט</td>
+        <td>הקבוצה של: שחקן יג, שחקן ז</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן ב, שחקן טז</td>
-        <td>הקבוצה של: שחקן יא, שחקן ג</td>
+        <td>הקבוצה של: שחקן יז, שחקן יד</td>
+        <td>הקבוצה של: שחקן ח, שחקן ה</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן יב, שחקן ד</td>
-        <td>הקבוצה של: שחקן יז, שחקן א</td>
+        <td>הקבוצה של: שחקן טז, שחקן ו</td>
+        <td>הקבוצה של: שחקן טו, שחקן ד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן ט, שחקן יד</td>
-        <td>הקבוצה של: שחקן טו, שחקן ז</td>
+        <td>הקבוצה של: שחקן ג, שחקן יא</td>
+        <td>הקבוצה של: שחקן ט, שחקן יב</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן יח, שחקן יט</td>
+        <td>אוטומטית עולה לסיבוב הבא (מזליסטים)</td>
     </tr>
 </table>
 </body>
