--- a/Server/index.html
+++ b/Server/index.html
@@ -26,23 +26,15 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן יח, שחקן יט</td>
-        <td>הקבוצה של: שחקן יג, שחקן ז</td>
+        <td>הקבוצה של: שחקן יז, שחקן ז</td>
+        <td>הקבוצה של: שחקן ג, שחקן ה</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן יז, שחקן יד</td>
-        <td>הקבוצה של: שחקן ח, שחקן ה</td>
+        <td>הקבוצה של: שחקן ו, שחקן טו</td>
+        <td>הקבוצה של: שחקן יט, שחקן יד</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן טז, שחקן ו</td>
-        <td>הקבוצה של: שחקן טו, שחקן ד</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: שחקן ג, שחקן יא</td>
-        <td>הקבוצה של: שחקן ט, שחקן יב</td>
-    </tr>
-    <tr>
-        <td>הקבוצה של: שחקן יח, שחקן יט</td>
+        <td>הקבוצה של: שחקן ג, שחקן ה</td>
         <td>אוטומטית עולה לסיבוב הבא (מזליסטים)</td>
     </tr>
 </table>
