Some un-noticed changes, don't notice

--- a/Server/index.html
+++ b/Server/index.html
@@ -26,16 +26,52 @@
         <th>קבוצה ב'</th>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן יז, שחקן ז</td>
-        <td>הקבוצה של: שחקן ג, שחקן ה</td>
+        <td>הקבוצה של: שחקן יא, שחקן כט, שחקן מג</td>
+        <td>הקבוצה של: שחקן כז, שחקן לט</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן ו, שחקן טו</td>
-        <td>הקבוצה של: שחקן יט, שחקן יד</td>
+        <td>הקבוצה של: שחקן מ, שחקן ח</td>
+        <td>הקבוצה של: שחקן ל, שחקן לב</td>
     </tr>
     <tr>
-        <td>הקבוצה של: שחקן ג, שחקן ה</td>
-        <td>אוטומטית עולה לסיבוב הבא (מזליסטים)</td>
+        <td>הקבוצה של: שחקן מא, שחקן יד</td>
+        <td>הקבוצה של: שחקן ו, שחקן לח</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן כו, שחקן מב</td>
+        <td>הקבוצה של: שחקן א, שחקן כד</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן יז, שחקן לו</td>
+        <td>הקבוצה של: שחקן ב, שחקן טז</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן מד, שחקן יט</td>
+        <td>הקבוצה של: שחקן יח, שחקן יב</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן ז, שחקן כב</td>
+        <td>הקבוצה של: שחקן לא, שחקן כ</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן י, שחקן טו</td>
+        <td>הקבוצה של: שחקן נ, שחקן מח</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן מז, שחקן כא</td>
+        <td>הקבוצה של: שחקן לז, שחקן יג</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן מה, שחקן לג</td>
+        <td>הקבוצה של: שחקן מו, Sahkan</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן מט, שחקן כה</td>
+        <td>הקבוצה של: שחקן ט, שחקן לד</td>
+    </tr>
+    <tr>
+        <td>הקבוצה של: שחקן ה, שחקן כח</td>
+        <td>הקבוצה של: שחקן כג, שחקן לה</td>
     </tr>
 </table>
 </body>
